// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macro useLingui Should throw if not used with destructuring 1`] = `
 Unsupported macro usage. Please check the examples at https://lingui.dev/ref/macro#examples-of-js-macros.
 If you think this is a bug, fill in an issue at https://github.com/lingui/js-lingui/issues

 Error: Must destruct \`t\` when using \`useLingui\` macro, i.e:
 const { t } = useLingui()
 or
 const { t: _ } = useLingui()
 
  2 |       import {useLingui} from "@lingui/macro";
  3 |       
> 4 |       const lingui = useLingui()
    |             ^^^^^^^^^^^^^^^^^^^^
  5 |        
  6 |         Learn more: https://www.npmjs.com/package/@lingui/macro
`;

exports[`macro useLingui Should throw if used not in the variable declaration 1`] = `
 Unsupported macro usage. Please check the examples at https://lingui.dev/ref/macro#examples-of-js-macros.
 If you think this is a bug, fill in an issue at https://github.com/lingui/js-lingui/issues

 Error: \`useLingui\` macro must be used in variable declaration.
        
 Example:

 const { t } = useLingui()

  2 |       import {useLingui} from "@lingui/macro";
  3 |       
> 4 |       useLingui()
    |       ^^^^^^^^^
  5 |        
  6 |         Learn more: https://www.npmjs.com/package/@lingui/macro
`;
